<resources>
    <string name="app_name">Le Bon Kwoin</string>
    <string name="formulaire_d_inscription">Formulaire d\'inscription</string>
    <string name="professionel">Professionel</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="nom_entreprise">Nom Entreprise</string>
    <string name="num_ro_t_l_phone">Numéro Téléphone</string>
    <string name="adresse_mail">Adresse Mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="valider">Valider</string>
    <string name="que_voulez_vous_faire">Que voulez vous faire ?</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="se_connecter">Se connecter</string>
    <string name="nom_de_l_annonce">Nom de l\'annonce</string>
    <string name="prix">Prix</string>
    <string name="description">Description</string>
    <string name="publier">Publier</string>
    <string name="cr_ation_d_une_annonce">Création d\'une annonce</string>
    <string name="image_ajout">Image de l\'annonce à ajouter</string>
    <string name="menu">Menu</string>
    <string name="rechercher_une_annonce">Rechercher une annonce</string>
    <string name="annonces_favorites">Annonces Favorites</string>
    <string name="mes_annonces">Mes annonces</string>
    <string name="publier_une_annonce">Publier une annonce</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="liste_des_annonces">Liste des annonces</string>
    <string name="logo">Logo</string>
    <string name="rechercher">Rechercher</string>
    <string name="contacter">Contacter</string>
    <string name="image_de_l_annonce">Image de l\'annonce</string>
    <string name="website">Site internet</string>
    <string name="chat">Chat</string>
    <string name="message">Message</string>
    <string name="send_message">send message</string>
    <string name="discussion">Discussion</string>
    <string name="liste_chat">Liste chat</string>
    <string name="appeler">Appeler</string>
    <string name="supprimer_l_annonce">Supprimer l\'annonce</string>
    <string name="ajouter_aux_favoris">Ajouter aux favoris</string>
    <string name="recharger">recharger</string>


    <string-array name="liste_regions">
        <item>Auvergne-Rhône-Alpes</item>
        <item>Bourgogne-Franche-Comté</item>
        <item>Bretagne</item>
        <item>Centre-Val de Loire</item>
        <item>Corse</item>
        <item>Grand Est</item>
        <item>Hauts-de-France</item>
        <item>Île-de-France</item>
        <item>Normandie</item>
        <item>Nouvelle-Aquitaine</item>
        <item>Occitanie</item>
        <item>Pays de la Loire</item>
        <item>Provence-Alpes-Côte d\'Azur</item>
        <item>Guadeloupe</item>
        <item>Martinique</item>
        <item>Guyane</item>
        <item>La Réunion</item>
        <item>Mayotte</item>

    </string-array>

    <string-array name="liste_categorie">
        <item>Autre</item>
        <item>Jardin</item>
        <item>Automobile</item>
        <item>Immobilier</item>
        <item>Services</item>
        <item>Culture</item>
        <item>Multimedia</item>
    </string-array>
</resources>