<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inscription"
    tools:visibility="visible">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/formulaire_d_inscription"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="631dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="60dp" />

        <CheckBox
            android:id="@+id/cb_isPro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/professionel" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nom_d_utilisateur"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nom"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/pr_nom"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_companyname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nom_entreprise"
            android:inputType="textPersonName"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/num_ro_t_l_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/adresse_mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/bt_valider_inscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valider" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>