<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="412dp"
        android:layout_height="23dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="367dp"
        android:layout_height="342dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <Button
            android:id="@+id/btn_recherche_annonce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rechercher_une_annonce" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btn_annonces_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/annonces_favorites" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btn_mes_annonces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mes_annonces" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btn_publier_annonces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publier_une_annonce" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_deconnexion"
        android:layout_width="146dp"
        android:layout_height="51dp"
        android:layout_weight="1"
        android:text="@string/deconnexion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>