<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/bg_login"
    tools:context=".AjoutAnnonce">

    <TextView
        android:id="@+id/textView3"
        style="@style/titreStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/cr_ation_d_une_annonce"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_annonce"
        android:layout_width="400dp"
        android:layout_height="253dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/image_ajout"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintBottom_toTopOf="@+id/et_nompublication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <Button
        android:id="@+id/btn_message"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginBottom="20dp"
        android:text="@string/publier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/liste_regions"
        app:layout_constraintBottom_toTopOf="@+id/btn_message"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerCategorie"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/liste_categorie"
        app:layout_constraintBottom_toTopOf="@+id/btn_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/spinner" />

    <ImageButton
        android:id="@+id/imgBtn_pickImage"
        android:layout_width="44dp"
        android:layout_height="29dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_annonce"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/et_nompublication"
        style="@style/textEntre"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/nom_de_l_annonce"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_prix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_prix"
        style="@style/textEntre"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/prix"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/et_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_description"
        style="@style/textEntre"
        android:layout_width="400dp"
        android:layout_height="138dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>