<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Liste_Annonces">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="412dp"
        android:layout_height="22dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/liste_des_annonces"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="597dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.904" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="396dp"
        android:layout_height="37dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="269dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/nom_de_l_annonce"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/rechercher"
            app:srcCompat="@android:drawable/ic_menu_search" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>