<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Annonce">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="391dp"
        android:layout_height="548dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_ajoutannonce"
            android:layout_width="match_parent"
            android:layout_height="284dp"
            android:contentDescription="@string/image_ajout"
            tools:src="@tools:sample/avatars" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/et_nompublication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nom de l'annonce" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/et_prix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Prix" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:gravity="start|top"
            android:text="Description de l'annonce" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="406dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_publier"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:text="@string/contacter" />

        <Space
            android:layout_width="64dp"
            android:layout_height="12dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btn_signaler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/image_de_l_annonce"
            app:srcCompat="@android:drawable/ic_dialog_alert" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>